--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.3.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
